// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnpublishedBufferCitationView test button click sets value should handle handleClick to open 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    xs="auto"
  >
    <WithStyles(Typography)
      variant="caption"
    >
      <i>
        <CitationView
          prefix=" "
          suffix=", "
        />
      </i>
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Created "
        suffix=", "
      />
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Updated "
        suffix="."
      />
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(IconButton)
      aria-haspopup="true"
      aria-label="More"
      onClick={[Function]}
    >
      <pure(MoreVertIcon)
        fontSize="small"
      />
    </WithStyles(IconButton)>
    <WithStyles(Menu)
      anchorEl={null}
      id="long-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        key="0"
        onClick={[Function]}
      >
        Edit selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="1"
        onClick={[Function]}
      >
        Edit author affiliations
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="2"
        onClick={[Function]}
      >
        Edit security for selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="3"
        onClick={[Function]}
      >
        Delete selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="4"
        onClick={[Function]}
      >
        More options
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`UnpublishedBufferCitationView test button click sets value should handle handleClick to open 2`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    xs="auto"
  >
    <WithStyles(Typography)
      variant="caption"
    >
      <i>
        <CitationView
          prefix=" "
          suffix=", "
        />
      </i>
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Created "
        suffix=", "
      />
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Updated "
        suffix="."
      />
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(IconButton)
      aria-haspopup="true"
      aria-label="More"
      onClick={[Function]}
    >
      <pure(MoreVertIcon)
        fontSize="small"
      />
    </WithStyles(IconButton)>
    <WithStyles(Menu)
      anchorEl={[MockFunction]}
      id="long-menu"
      onClose={[Function]}
      open={true}
    >
      <WithStyles(MenuItem)
        key="0"
        onClick={[Function]}
      >
        Edit selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="1"
        onClick={[Function]}
      >
        Edit author affiliations
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="2"
        onClick={[Function]}
      >
        Edit security for selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="3"
        onClick={[Function]}
      >
        Delete selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="4"
        onClick={[Function]}
      >
        More options
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`UnpublishedBufferCitationView test button click sets value should handle handleClose to close 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    xs="auto"
  >
    <WithStyles(Typography)
      variant="caption"
    >
      <i>
        <CitationView
          prefix=" "
          suffix=", "
        />
      </i>
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Created "
        suffix=", "
      />
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Updated "
        suffix="."
      />
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(IconButton)
      aria-haspopup="true"
      aria-label="More"
      onClick={[Function]}
    >
      <pure(MoreVertIcon)
        fontSize="small"
      />
    </WithStyles(IconButton)>
    <WithStyles(Menu)
      anchorEl={null}
      id="long-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        key="0"
        onClick={[Function]}
      >
        Edit selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="1"
        onClick={[Function]}
      >
        Edit author affiliations
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="2"
        onClick={[Function]}
      >
        Edit security for selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="3"
        onClick={[Function]}
      >
        Delete selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="4"
        onClick={[Function]}
      >
        More options
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`UnpublishedBufferCitationView test button click sets value should handle handleClose to close 2`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    xs="auto"
  >
    <WithStyles(Typography)
      variant="caption"
    >
      <i>
        <CitationView
          prefix=" "
          suffix=", "
        />
      </i>
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Created "
        suffix=", "
      />
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Updated "
        suffix="."
      />
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(IconButton)
      aria-haspopup="true"
      aria-label="More"
      onClick={[Function]}
    >
      <pure(MoreVertIcon)
        fontSize="small"
      />
    </WithStyles(IconButton)>
    <WithStyles(Menu)
      anchorEl={[MockFunction]}
      id="long-menu"
      onClose={[Function]}
      open={true}
    >
      <WithStyles(MenuItem)
        key="0"
        onClick={[Function]}
      >
        Edit selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="1"
        onClick={[Function]}
      >
        Edit author affiliations
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="2"
        onClick={[Function]}
      >
        Edit security for selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="3"
        onClick={[Function]}
      >
        Delete selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="4"
        onClick={[Function]}
      >
        More options
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`UnpublishedBufferCitationView test button click sets value should handle handleClose to close 3`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    xs="auto"
  >
    <WithStyles(Typography)
      variant="caption"
    >
      <i>
        <CitationView
          prefix=" "
          suffix=", "
        />
      </i>
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Created "
        suffix=", "
      />
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Updated "
        suffix="."
      />
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(IconButton)
      aria-haspopup="true"
      aria-label="More"
      onClick={[Function]}
    >
      <pure(MoreVertIcon)
        fontSize="small"
      />
    </WithStyles(IconButton)>
    <WithStyles(Menu)
      anchorEl={null}
      id="long-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        key="0"
        onClick={[Function]}
      >
        Edit selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="1"
        onClick={[Function]}
      >
        Edit author affiliations
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="2"
        onClick={[Function]}
      >
        Edit security for selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="3"
        onClick={[Function]}
      >
        Delete selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="4"
        onClick={[Function]}
      >
        More options
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`UnpublishedBufferCitationView test button click sets value should handle navigateToUrl 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    xs="auto"
  >
    <WithStyles(Typography)
      variant="caption"
    >
      <i>
        <CitationView
          prefix=" "
          suffix=", "
        />
      </i>
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Created "
        suffix=", "
      />
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Updated "
        suffix="."
      />
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(IconButton)
      aria-haspopup="true"
      aria-label="More"
      onClick={[Function]}
    >
      <pure(MoreVertIcon)
        fontSize="small"
      />
    </WithStyles(IconButton)>
    <WithStyles(Menu)
      anchorEl={null}
      id="long-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        key="0"
        onClick={[Function]}
      >
        Edit selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="1"
        onClick={[Function]}
      >
        Edit author affiliations
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="2"
        onClick={[Function]}
      >
        Edit security for selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="3"
        onClick={[Function]}
      >
        Delete selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="4"
        onClick={[Function]}
      >
        More options
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`UnpublishedBufferCitationView test button click sets value should load menu correctly 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    xs="auto"
  >
    <WithStyles(Typography)
      variant="caption"
    >
      <i>
        <CitationView
          prefix=" "
          suffix=", "
        />
      </i>
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Created "
        suffix=", "
      />
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Updated "
        suffix="."
      />
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(IconButton)
      aria-haspopup="true"
      aria-label="More"
      onClick={[Function]}
    >
      <pure(MoreVertIcon)
        fontSize="small"
      />
    </WithStyles(IconButton)>
    <WithStyles(Menu)
      anchorEl={null}
      id="long-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        key="0"
        onClick={[Function]}
      >
        Edit selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="1"
        onClick={[Function]}
      >
        Edit author affiliations
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="2"
        onClick={[Function]}
      >
        Edit security for selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="3"
        onClick={[Function]}
      >
        Delete selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="4"
        onClick={[Function]}
      >
        More options
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`UnpublishedBufferCitationView test button click sets value should render empty component with no date 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    xs="auto"
  >
    <WithStyles(Typography)
      variant="caption"
    >
      <i>
        <CitationView
          prefix=" "
          suffix=", "
        />
      </i>
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Created "
        suffix=", "
      />
      <DateCitationView
        className="citationDate"
        format="DD/MM/YYYY"
        isLocalised={true}
        prefix="Updated "
        suffix="."
      />
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(IconButton)
      aria-haspopup="true"
      aria-label="More"
      onClick={[Function]}
    >
      <pure(MoreVertIcon)
        fontSize="small"
      />
    </WithStyles(IconButton)>
    <WithStyles(Menu)
      anchorEl={null}
      id="long-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        key="0"
        onClick={[Function]}
      >
        Edit selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="1"
        onClick={[Function]}
      >
        Edit author affiliations
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="2"
        onClick={[Function]}
      >
        Edit security for selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="3"
        onClick={[Function]}
      >
        Delete selected record
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="4"
        onClick={[Function]}
      >
        More options
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
